--- a/site vitrine/index.html
+++ b/site vitrine/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">Logo</h1>
+        <h1 class="logo">Ranking next gen videos games !</h1>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <nav>
             <ul>
@@ -30,7 +30,18 @@
     <div class="triple_element">
         <div class="box" style="background-color: rgba(216, 216, 216, 1);"><div class="console_title">TOP PS5</div><div id="myData"></div></div>
         <div class="box" style="background-color: rgba(165, 165, 165, 1);"><div class="console_title">TOP XBOX</div><div id="myData2"></div></div>
-        <div class="box" style="background-color: rgba(89, 89, 89, 1);"><div class="console_title">TOP PC</div><div id="myData3"></div></div>
+        <div class="box" style="background-color: rgba(89, 89, 89, 0.7);">
+            <div class="console_title">TOP</div>
+            <div class="inputs_fields">
+                <select id="console_id">
+                    <option value="PS5">PS5</option>
+                    <option value="XBOX">XBOX</option>
+                    <option value="PC" selected>PC</option>
+                </select>
+                <input id="ranking_id" type="number" min=1 max=10 value=1 placeholder="ranking"/>
+                <button id="search_box3"> search </button>
+            </div>
+            <div id="myData3"></div></div>
     </div>
     <script src="data.js"></script>
 </body>
